Update web app title

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>React Transform Boilerplate</title>
+    <title>Movie Recommender System</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css">
   </head>
